--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2><u>About <span class="primary">me🤘</u></span> <span class="title-bg">Suman</span></h2>
+                                    <h2><u>About <span class="primary">me🤘</u></span> <span class="title-bg">PriP</span></h2>
                                     <p>I am outgoing, dedicated, and open-minded. I get across to people and adjust to changes with ease. I believe that a person should work on developing their professional skills and learning new things all the time.</p>
                                 </div>
                             </div>
