--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                                     <div class="author-desc">
                                         <p><b>Date of birth:</b> 11th August 2002</p>
                                         <p><b>Language:</b> English, Hindi, Chhattisgarhi</p>
-                                        <p><b>Expert in:</b> Pyhton, C, C++, JavaScript, Bash</p>
+                                        <p><b>Expert in:</b> Python, C, C++, JavaScript, Bash</p>
                                         <p><b>Freelance:</b> Available😁</p>
                                     </div>
                                     <!-- /.author-desc -->
