--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title home text-center">
-                                    <a href="./welcome.html"><img src="img/Priyanshu.jpg" alt="" width="100px"></a>
+                                    <a href="welcome.html"><img src="img/Priyanshu.jpg" alt="" width="100px"></a>
                                     <h1><b>I Am Priyanshu❤️</b></h1>
                                     <p><u>A 1st Year Btech Student &amp; An Ethical Hacker &amp; Tech Enthusiast &amp; Developer.</u></p>
                                 </div>
