--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                                     <div class="author-desc">
                                         <p><b>Date of birth:</b> 11th August 2002</p>
                                         <p><b>Language:</b> English, Hindi, Chhattisgarhi</p>
-                                        <p><b>Expert in:</b> Python, C, C++, JavaScript, Bash</p>
+                                        <p><b>Expert in:</b> Python, C, C++, Java, Bash</p>
                                         <p><b>Freelance:</b> Available😁</p>
                                     </div>
                                     <!-- /.author-desc -->
@@ -84,7 +84,7 @@
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="75%"></div>
+                                        <div class="skill-lavel" data-skill-value="80%"></div>
                                     </div> <!-- /.progress -->
                                     
                                     <div class="progress clear">
