--- a/services.html
+++ b/services.html
@@ -93,8 +93,8 @@
                                             <div class="icon">
                                                 <i class="et-line icon-profile-male"></i>
                                             </div>
-                                            <h4>Website<br> Designer</h4>
-                                            <p>Can make really good and <br> engaging website for <br> yuur page</p>
+                                            <h4>Neural<br>Network<br>implementer</h4>
+                                            <p>I am capable of implementing <br> most of the NN just by reading <br>core Reasrch Paper</p>
                                         </div>
                                     </div>
                                     <div class="service-hex">
@@ -126,7 +126,7 @@
                                                 <i class="et-line icon-hotairballoon"></i>
                                             </div>
                                             <h4>Managing <br> data</h4>
-                                            <p>Can manage and handle your <br> data effectively <br>using excel hacks😁</p>
+                                            <p>Can manage and handle your <br> data effectively <br>using csvs, sqls and no-sql.</p>
                                         </div>
                                     </div>
                                 </div>
