--- a/works.html
+++ b/works.html
@@ -48,7 +48,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
                                     <h2><u>My <span class="primary">certificate</u></span> <span class="title-bg">Achive</span></h2>
-                                    <p>Here are my achivements.</p>
+                                    <p>Here are my achivements. Soon will add more</p>
                                 </div>
                             </div>                            
                         </div> <!-- /.row -->
