--- a/contact.html
+++ b/contact.html
@@ -112,32 +112,34 @@
                                     <span class="bar-dark"></span>
                                     <span class="bar-primary"></span>
                                 </div>
-
+                                <span class="text-center">I am always open to discuss your project, creative ideas, or opportunities to be part of your visions.</span><br>
+                                <h3>Contact</h3><u><a href="https://forms.gle/neLonfQXAunLKX1M9" class="primary">https://forms.gle/neLonfQXAunLKX1M9</a></u>
+                                <!--
                                 <form id="contact-form" class="row contact-form no-gutter" action="#" method="post">
                                     <div class="col-xs-12 col-sm-6">
                                         <div class="input-field name">
                                             <span class="input-icon" id="name" ><i class="tf-profile-male"></i></span>
                                             <input type="text" class="form-control"  placeholder="Enter your name">
                                         </div>
-                                    </div> <!-- ./col- -->
+                                    </div> 
                                     <div class="col-xs-12 col-sm-6">
                                         <div class="input-field email">
                                             <span class= "input-icon" id="email"><i class="tf-envelope2"></i></span>
                                             <input type="email" class="form-control" name="email" placeholder="Your email address">
                                         </div>
-                                    </div> <!-- ./col- -->
+                                    </div> 
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="input-field">
                                             <span class= "input-icon" id="subject"><i class="tf-pricetags"></i></span>
                                             <input type="text" class="form-control" name="subject" placeholder="Enter the discussion title">
                                         </div>
-                                    </div> <!-- ./col- -->
+                                    </div> 
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="input-field message">
                                             <span class= "input-icon" ><i class="tf-pencil2"></i></span>
                                             <textarea name="message" id="message" class="form-control" placeholder="Write your message"></textarea>
                                         </div>
-                                    </div> <!-- ./col- -->
+                                    </div> 
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="input-field">
                                             <span class="btn-border">
@@ -146,8 +148,8 @@
                                         </div>
                                         <div class="msg-success">Your Message was sent successfully</div>
                                         <div class="msg-failed">Something went wrong, please try again later</div>
-                                    </div> <!-- ./col- -->
-                                </form> <!-- /.row -->
+                                    </div> 
+                                </form> -->
                             </div> <!-- /.col- -->
                         </div> <!-- /.row -->
                     </div> <!-- /.container -->
