--- a/resume.html
+++ b/resume.html
@@ -102,10 +102,20 @@
                             <div class="col-xs-12 col-sm-6">
                                 <div class="history-block">
                                     <div class="section-title light clear">
-                                        <h3>Internships</h3>
+                                        <h3>Certifications</h3>
                                     </div>
                                     <!-- /.section-title -->
                                     <div class="history-scroller">
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>NPTEL DAS with Python</h5>
+                                                <span>2021</span>
+                                            </div>
+                                        </div>
                                         <div class="history-item">
                                             <div class="history-icon">
                                                 <span class="history-hex"></span>
