--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <div class="page-title home text-center">
                                     <a href="welcome.html"><img src="img/Priyanshu.jpg" alt="" width="100px"></a>
                                     <h1><b>I Am Priyanshu❤️</b></h1>
-                                    <p><u>A 3st Year Btech Student &amp; An Ethical Hacker &amp; Neural Network &amp; Developer.</u></p>
+                                    <p><u>A 4th Year Btech Student &amp; An Ethical Hacker &amp; Neural Network &amp; Developer.</u></p>
                                 </div>
 
                                 <div class="hexagon-menu clear">
